# Project-cpp

./: CmakeLists.txt  INTER.ASM  README.md  tprintf.asm
Akinator/: Akinator.cpp  Akinator.hpp  CMakeLists.txt
Assembly/NASM/: T_PRINTF
Assembly/TASM/: INTERRUPTION_CREATOR
Compilers/: CMakeLists.txt  Processor.cpp  Processor.hpp  StandartDefs.h  StandartUndefs.h  cmd.tlang
Examples/: AKINATOR_EXAMPLE.bat  COMPILERS_EXAMPLE.bat  EXPRESSIONS_EXAMPLE.bat  GRAMMAR_EXAMPLE.bat  INTERPRITATOR_EXAMPLE.bat  TEST_GRAM  TEST_INTR_PROGRAM1  TEST_INTR_PROGRAM2  TEST_TASM_PROGRAM  src.txt  test.tasm  testGram.txt
Expressions/: CMakeLists.txt  ExpressionHandler.cpp  ExpressionHandler.hpp  NodeConstructor
GrammarParsing/: CMakeLists.txt  TestGrammar.cpp
GrammarParsing/GrammarParsersCreator/: GrammarParsersCreator.cpp  GrammarParsersCreator.hpp
Interpritator/: CMakeLists.txt  GrammarParserUtilities.cpp  GrammarParserUtilities.hpp  Interpritator.cpp  Interpritator.hpp  LangParser.cpp  LangParser.hpp
Interpritator/InterpritatorPatterns/: DEFAULT_FUNCS  OPERATORS  TYPES
PE_Editor/: CMakeLists.txt  PE_Editor.cpp  PE_Editor.hpp
Programming Ded/: GRAM_RULES  tOnegin.h  tStack.h  tTestFuncLib.h
Programming Ded/tAkinator/: tAkinator.h
Run/: CMakeLists.txt  Run.cpp  Run.hpp  Starter.cpp
Storage/: CMakeLists.txt  Container.hpp  Stack.hpp  Storage.cpp  Storage.hpp  StrongContainer.hpp  Treap.cpp  Treap.hpp  tList.hpp
Utilities/: CMakeLists.txt  CallTreeBuilder.cpp  CallTreeBuilder.hpp  FileHandler.cpp  FileHandler.hpp  String.cpp  String.hpp  Utilities.cpp  Utilities.hpp
(+50 files in other folders)
